--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "formiojs": "^3.0.0-alpha.18",
     "lodash": "^4.17.10",
+    "ngx-pagination": "^3.1.1",
     "rxjs": "^6.1.0",
     "zone.js": "^0.8.26"
   },
